# memedrip

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/bot/: Dockerfile  docker-compose.yml  package.json
apps/bot/src/: index.ts
apps/overlay/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/overlay/src/: App.tsx  OverlayEngine.tsx  index.css  main.tsx  useMediaQueue.ts  useWebSocket.ts  vite-env.d.ts
apps/overlay/src-tauri/: Cargo.toml  tauri.conf.json
apps/overlay/src-tauri/capabilities/: default.json
apps/overlay/src-tauri/src/: lib.rs  main.rs
backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts  mediaExtractor.ts  types.ts
backend/test/: mediaExtractor.test.ts
client/: index.html  overlay.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
client/electron/: main.ts  preload.ts
client/src/: App.tsx  electron.d.ts  overlay.ts  styles.css
