[package]
name = "memedrip-overlay"
version = "1.0.0"
description = "MemeDrip desktop overlay"
edition = "2021"
rust-version = "1.77"

[lib]
name = "memedrip_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified.
custom-protocol = ["tauri/custom-protocol"]
